# VenueOps-Agent

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json
apps/web/: .dockerignore  Dockerfile  next.config.js  package.json
data/scripts/: generate_embeddings.py  reset_demo.py  seed_demo_data.py
data/seed/: events.json  incidents.json  inventory.json  sop_docs.json  staff_shifts.json  telemetry.json  tenants.json  venues.json  zones.json
docs/: architecture.md  data_model.md  demo_script.md  evaluation.md  judging_alignment.md  mongodb_mcp_setup.md  p0_p1_completion_audit.md  security.md
docs/demo_assets/: venueops_demo_narration.txt
infra/: cloudbuild-api.yaml
infra/cloudrun/: api-service.yaml  web-service.yaml
infra/scripts/: deploy.sh  enable_gcp_services.sh  preflight.sh  setup_secrets.sh
scripts/: build_demo_video.py  smoke_api_flow.py
services/api/: Dockerfile  main.py  pyproject.toml
services/api/app/: __init__.py  config.py
services/api/app/agents/: adk_agent.py  prompts.py  root_agent.py
services/api/app/agents/subagents/: __init__.py  ops_analyst.py  planner.py  retail_analyst.py  safety_agent.py
services/api/app/db/: indexes.py  mongo.py
services/api/app/routes/: actions.py  agent.py  dashboard.py  demo.py  health.py
services/api/app/tools/: action_tools.py  mongodb_mcp.py  policies.py  risk_tools.py  simulation_tools.py  sop_retriever.py
services/api/tests/: test_adk_and_vector_search.py  test_agent_run.py  test_health_routes.py  test_risk_tools.py
(+19 files in other folders)
